# finances_hub

./: .gitignore  README.md  pyproject.toml
config/: ingestion_jobs.yaml
docs/: AGENTS.md  ARCHITECTURE.md  BACKLOG.md  DATA_SOURCES.md  GOLD_SCHEMA.md  PROJECT_GUIDE.md  ROADMAP.md  SILVER_SCHEMA.md
sql/: bronze_schema.sql
sql/bronze/: schema.sql
sql/bronze/tests/: ingestion_events_tests.sql
sql/gold/: br_stocks_daily.sql  crypto_prices_daily.sql  etfs_daily.sql  fiat_fx_rates_daily.sql  indices_daily.sql  nubank_trade_events.sql  schema.sql
sql/gold/manual_backfills/: 20240123_fesa4_manual_insert.sql  20240205_unip6_manual_insert.sql  20241119_trpl4_isae4_manual_insert.sql  20260206_guar3_riaa3_manual_insert.sql  20260223_sbsp3_manual_insert.sql  taxes.csv
sql/silver/: binance_prices.sql  nubank_trade_events.sql  nuinvest_trade_events.sql  schema.sql  yfinance_prices.sql
src/ingestion/: RAW_ENVELOPE.md  binance.py  coingecko.py  http_client.py  models.py  nubank_stock_pdf.py  nubank_trading_notes.py  persist.py  yfinance_stock.py
src/orchestration/: README.md  __init__.py  run_trading_notes.py  runner.py
src/processing/: __init__.py  sql_tests.py
src/storage/: raw_file_store.py  raw_postgres.py
tests/ingestion/: test_binance_daily.py  test_coingecko_daily.py  test_nubank_trading_notes.py  test_persist.py  test_yfinance_stock.py
tests/orchestration/: test_runner.py
tests/processing/: test_gold_transform.py  test_silver_transform.py
tests/storage/: test_raw_postgres.py
tests/trading_notes_ingestion/: test_run.py
(+12 files in other folders)
